[gd_scene load_steps=5 format=1]

[ext_resource path="res://themes/Default.tres" type="Theme" id=1]
[ext_resource path="res://scripts/ui/TitleScreen.gd" type="Script" id=2]
[ext_resource path="res://themes/images/default/backdrop1.png" type="Texture" id=3]
[ext_resource path="res://themes/images/default/title.png" type="Texture" id=4]



[node name="TitleScreen" type="Control"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 1 )
margin/left = 0.0
margin/top = 0.0
margin/right = 984.0
margin/bottom = 560.0
script/script = ExtResource( 2 )
update_text = "Changelog:
* finished splash and title screens"

[node name="TextureFrame" type="TextureFrame" parent="."]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = -984.0
margin/bottom = -560.0
texture = ExtResource( 3 )
expand = true
stretch_mode = 0

[node name="Title" type="TextureFrame" parent="."]

anchor/right = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 110.0
margin/top = 110.0
margin/right = -870.0
margin/bottom = 190.0
texture = ExtResource( 4 )
expand = true
stretch_mode = 0

[node name="ButtonBox" type="VBoxContainer" parent="."]

anchor/left = 3
anchor/top = 3
anchor/right = 3
anchor/bottom = 3
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -180.0
margin/top = -280.0
margin/right = -360.0
margin/bottom = -446.0
custom_constants/separation = 32
alignment = 0
__meta__ = {
"_edit_group_": true
}

[node name="NewGameButton" type="Button" parent="ButtonBox"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 180.0
margin/bottom = 28.0
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "NEW_GAME"
flat = false

[node name="MultiplayerButton" type="Button" parent="ButtonBox"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 60.0
margin/right = 180.0
margin/bottom = 88.0
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "MULTIPLAYER"
flat = false

[node name="QuitButton" type="Button" parent="ButtonBox"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 120.0
margin/right = 180.0
margin/bottom = 148.0
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "QUIT"
flat = false

[node name="UpdateBox" type="TextEdit" parent="."]

anchor/left = 3
anchor/top = 3
anchor/right = 3
anchor/bottom = 3
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -550.0
margin/top = -240.0
margin/right = -920.0
margin/bottom = -480.0
syntax_highlighting = false
show_line_numbers = false
highlight_all_occurrences = false
caret/block_caret = false
caret/caret_blink = false
caret/caret_blink_speed = 0.65

[connection signal="pressed" from="ButtonBox/NewGameButton" to="." method="_on_NewGameButton_pressed"]

[connection signal="pressed" from="ButtonBox/MultiplayerButton" to="." method="_on_MultiplayerButton_pressed"]

[connection signal="pressed" from="ButtonBox/QuitButton" to="." method="_on_QuitButton_pressed"]


